gitops/infrastructure/gateway/envoy-kind-bridge-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-kind-bridge-svc
  namespace: envoy-gateway-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: moto-lab-gateway
    gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
  ports:
  - name: http
    port: 80
    targetPort: 10080  # <-- CORREGIDO: El puerto real de Envoy
    nodePort: 31573
